--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
 #set(CMAKE_CXX_FLAGS "-Ofast -Wall -Wextra")
 #set(CMAKE_CXX_FLAGS "-O0 -Wall -Wextra")
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native") # for SSE and AVX
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native") # for SSE and AVX
 
 include_directories(
         include
@@ -16,13 +16,13 @@ add_executable(cpp_oop_vs_dod
         Node.cpp
         Node.h
         include/benchmark/benchmark-array.hpp
-)
+        )
 
 add_executable(simple_benchmark
         simple_benchmark.cpp
-)
+        )
 
 
 add_executable(benchmark
         benchmark-main.cpp
-)
+        )
